--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,9 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
+  <!-- Google Maps API key -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXsZq7PL2lnJQ_SE2AFhxj7Zn-DiDjyi4"></script>
+
   <title>decarl</title>
   <link rel="manifest" href="manifest.json">
 
